Add PLEX_LIBRARY_NAME and DISCORD_USER_ID to .env for configurable Plex library and user mention

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,11 @@ DISCORD_LOGGING_WEBHOOK_URL=your_webhook_url_here
 # Webhook URL for sending logs to a Discord channel.
 # Create one in Discord under Server Settings -> Integrations -> Webhooks
 
+# Discord user ID to mention in notifications (just the numeric ID, no <@>)
+DISCORD_USER_ID=123456789012345
+# Your Discord user ID to be notified when a movie is watched.
+# Right-click your profile in Discord and select "Copy ID" (Developer Mode must be enabled).
+
 # Plex configuration
 PLEX_USERNAME=your_plex_username
 # Your Plex account username used to identify your activity on the Plex server.
@@ -18,6 +23,10 @@ PLEX_TOKEN=your_plex_token_here
 PLEX_SERVER_URL=http://your_plex_server_ip:32400
 # URL of your Plex server, including IP and port (default is 32400).
 # Example: http://192.168.1.100:32400
+
+# Plex library name to monitor for watched movies
+PLEX_LIBRARY_NAME=Movies
+# Example: "Movies", "Filme", "My Movie Library" - must match the name of your Plex library exactly.
 
 NOTIFY_CHANNEL_ID=your_channel_id_here
 # ID of the Discord channel where movie notifications will be sent.
