CI: Add Dev branch to Docker build workflow

--- a/.github/workflows/build-docker-image.yaml
+++ b/.github/workflows/build-docker-image.yaml
@@ -9,6 +9,7 @@ on:
   push:
     branches:
       - main
+      - Dev
   release:
     types:
       - published
@@ -39,7 +40,8 @@ jobs:
         tags: |
           type=sha
           type=semver,pattern={{version}}
-          type=ref,event=branch,prefix=main-
+          type=raw,value=dev,enable=${{ github.ref == 'refs/heads/Dev' }}
+          type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
         flavor: |
           latest=${{ github.event_name == 'release' }}
 
