Docs: Add EXCLUDED_LIBRARIES to .env.example

--- a/.env.example
+++ b/.env.example
@@ -24,6 +24,11 @@ PLEX_SERVER_URL=http://your_plex_server_ip:32400
 # URL of your Plex server, including IP and port (default is 32400).
 # Example: http://192.168.1.100:32400
 
+EXCLUDED_LIBRARIES=Demo - Clips
+# Comma-separated list of Plex library names to exclude from notifications.
+# Movies watched from these libraries will not trigger Discord notifications.
+# Example: EXCLUDED_LIBRARIES=4K Movies,Kids Movies,Test Library
+
 NOTIFY_CHANNEL_ID=your_channel_id_here
 # ID of the Discord channel where movie notifications will be sent.
 # Right-click a channel in Discord and select "Copy ID" (Developer Mode must be enabled).
