feat: prepare for v2.0.0 release - update dependencies and clean project structure
- Update discord.py from 2.5.0 to 2.6.4 for latest features and security
- Add docs and tests to .gitignore for cleaner repository
- Remove temporary diff file
- Finalize codebase for stable v2.0.0 release

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@ logs
 # Data directories with generated or sensitive content
 data
 
+docs
+
+tests
+
 # Python-specific files and directories
 __pycache__/
 *.pyc
