fix: Docker container logging not showing output
- Add PYTHONUNBUFFERED=1 to disable Python output buffering
- Fix working directory (WORKDIR /app/src) for correct module imports
- Bump version to 1.2.5

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     restart: unless-stopped
     env_file:
       - .env
+    environment:
+      - PYTHONUNBUFFERED=1
     volumes:
       - ./logs:/app/logs
       - ./data:/app/data
